# MemMimic

./: .cursorrules  .env.template  .gitignore  ARCHITECTURE.md  AUDIT_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_RESPONSE.md  CRITICAL_ISSUES_FOUND.md  DEEP_ARCHITECTURE_ANALYSIS.md  EVOLUTION_TIMELINE.md  IMPLEMENTATION_DIFF_SUMMARY.md  JOURNEY.md  LICENSE  MEMMIMIC_REFACTORING_PLAN.md  MEMMIMIC_RESEARCH_REPORT.md  MEMMIMIC_TIMELINE_ANALYSIS.md  MEMMIMIC_V2_ENHANCEMENT_PROPOSAL.md  MEMMIMIC_V2_STORY_MAP_SPRINT_PLAN.md  MONITORING_DEPLOYMENT_SUMMARY.md  MemMimic_AMMS_Review_Report.md  MemMimic_Deep_Dive_Analysis.md  PLAN.md  PRD_Error_Handling_Framework.md  PROJECT_STATUS_COMPLETE.md  Phase_3_Task_3.1_Implementation_Context.md  QUALITY_AGENT_GAMMA_REPORT.md  README.md  SECURITY_IMPLEMENTATION_REPORT.md  STRUCTURE.md  TODO_SUMMARY.md  TRUE_10_Tool_Architecture_FINAL.md  cleanup_report.json  coverage.json  debug_consciousness_patterns.py  debug_coordinator_issues.py  debug_integration.py  debug_patterns.py  (+25 more)
.archive/: ARCHIVE_INTELLIGENCE_INDEX.md  async_vs_sync_benchmark_report.json  cache_performance_report.json  check_unused_imports.py  cleanup_organization_report.json  coverage_analysis_report.json  import_analysis_report.json  optimized_cache_performance_report.json  organize_root.py  performance_dashboard.json  verify_implementation.py
.database_backup_20250722_215113/: demo_consciousness.db-shm
.taskmaster/: config.json  state.json
Memory/: README.md
config/: optimized_tales_config.yaml  performance_config.yaml
docs/: ADR_CACHING_STRATEGY.md  ADR_PHASE2_MODULAR_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  CACHING_SYSTEM.md  CONSCIOUSNESS_INTEGRATION.md  DOCUMENTATION_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH.md  MIGRATION_GUIDE.md  MONITORING_RUNBOOK.md  PERFORMANCE.md  (+13 more)
(+835 files in other folders)
